--- a/src/index.html
+++ b/src/index.html
@@ -20,20 +20,22 @@
     <app-root></app-root>
 
 
+    <!--<a id="openCircularModale" data-modal="test" data-action="open" >open</a>-->
 
-    <a id="openCircularModale" data-modal="test" data-action="open" *ngIf="false"></a>
-    <div class="overlay"><div class="overlay__ripple"></div></div>
-    <div class="modal-wrapper">
-        <div class="modal" data-modal="test">
-            <i class="material-icons right closeModalBtn" data-action="close">highlight_off</i>
-            <div class="container">
-                <img id="itemImg" class="responsive-img center-block" align="">
-                <div id="ietemTitle"></div>
-                <p id="itemDesc"></p>
-                <div id="itemPrice"></div>
-            </div>
-        </div>
-    </div>
+        <!--<div class="overlay"><div class="overlay__ripple"></div></div>-->
+        <!--<div class="modal-wrapper">-->
+            <!--<div class="modal" data-modal="test">-->
+                <!--<i class="material-icons right closeModalBtn" data-action="close">highlight_off</i>-->
+                <!--<div class="container">-->
+                    <!--<img id="itemImg" class="responsive-img center-block" align=""/>-->
+                    <!--<div id="ietemTitle"></div>-->
+                    <!--<p id="itemDesc"></p>-->
+                    <!--<div id="itemPrice"></div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+
+
 
     <script type="text/javascript" src="assets/resources/JS/Libs/jquery-2.2.3.min.js"></script>
     <script src="assets/resources/JS/Libs/materialize.min.js"></script>
